manifests/deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  labels:
    app: hello-world
  name: hello-world
spec:
  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause: {duration: 10}
      - setWeight: 40
      - pause: {duration: 20}
      - setWeight: 60
      - pause: {duration: 30}
      - setWeight: 80
      - pause: {duration: 40}
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - image: go-sample-app:3.0.0
        imagePullPolicy: Never
        name: hello-world
        resources:
          limits:
            memory: 50Mi
            cpu: 5m
          requests:
            memory: 50Mi
            cpu: 5m
        ports:
        - name: http
          containerPort: 8081
          protocol: TCP
